--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,68 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"></a>
+      <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="faqs/index.html" target="_blank">FAQ</a></li>
+            <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          </ul>
+        </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="content-wrapper">
+      <div class="hero">
+          <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+      <aside class="form">
+        <div class="form-text">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form-input">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">    
+        </div>
+      </aside>
+    </section>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h3>Contact</h3>
+          <p>830-774-2158</p>
+          <a href="mailto:stellam777@gmail.com">stellam777@gmail.com</a>
+        </address>
+        <div class="social">
+          <h3>Social</h3>
+          <ul>
+            <li><a href="placeholder" target="_blank"> <img src="img/facebook.png" alt="Facebook"/></a></li>
+            <li><a href="placeholder" target="_blank"> <img src="img/twitter.png" alt="Twitter"/></a></li>
+            <li><a href="placeholder"target="_blank"> <img src="img/instagram.png" alt="Instagram"/></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+
+
+
+
+
+
+
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
