--- a/index.html
+++ b/index.html
@@ -37,39 +37,46 @@
   </header>
 
   <main>
-    <section class="content-wrapper">
-      <div class="hero">
+    <section class="hero">
+      <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
       </div>
-      <aside class="form">
-        <div class="form-text">
-          <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        </div>
-        <div class="form-input">
-          <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
-          <input type="button" value="Download Itinerary">    
+    </section>
+
+      <aside>
+        <div class="content-wrapper">
+          <div class="form-text">
+            <h3>Want to join the next retreat?</h3>
+            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          </div>
+          <div class="form-input">
+            <h3>Find out more</h3>
+            <input type="text" name="name" value="email address">
+            <input type="button" value="Download Itinerary">    
+          </div>
         </div>
       </aside>
-    </section>
   </main>
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h3>Contact</h3>
-          <p>830-774-2158</p>
-          <a href="mailto:stellam777@gmail.com">stellam777@gmail.com</a>
+          <h4>Contact</h4>
+          <p>830-774-2158<br>
+          <a href="mailto:stellam777@gmail.com">stellam777@gmail.com</a></p>
         </address>
         <div class="social">
-          <h3>Social</h3>
-          <ul>
-            <li><a href="placeholder" target="_blank"> <img src="img/facebook.png" alt="Facebook"/></a></li>
-            <li><a href="placeholder" target="_blank"> <img src="img/twitter.png" alt="Twitter"/></a></li>
-            <li><a href="placeholder"target="_blank"> <img src="img/instagram.png" alt="Instagram"/></a></li>
-          </ul>
+          <h4>Social</h4>
+            <p>
+              <a href="placeholder" target="_blank"></a>
+            </p>
+            <p>
+              <a href="placeholder" target="_blank"></a>
+            </p>
+            <p>
+              <a href="placeholder"target="_blank"></a>
+            </p>
         </div>
       </div>
     </div>
