--- a/index.html
+++ b/index.html
@@ -37,25 +37,70 @@
   </header>
 
   <main>
-    <section class="hero">
+    <section class="hero-area">
       <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
 
-      <aside>
-        <div class="content-wrapper">
-          <div class="form-text">
-            <h3>Want to join the next retreat?</h3>
-            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-          </div>
-          <div class="form-input">
-            <h3>Find out more</h3>
-            <input type="text" name="name" value="email address">
-            <input type="button" value="Download Itinerary">    
-          </div>
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-text">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div>
-      </aside>
+        <div class="form-input">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">    
+        </div>
+      </div>
+    </aside>
+
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items"></div>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
   </main>
 
   <footer>
@@ -64,10 +109,11 @@
         <address class="contact">
           <h4>Contact</h4>
           <p>830-774-2158<br>
-          <a href="mailto:stellam777@gmail.com">stellam777@gmail.com</a></p>
+          stellam777@gmail.com</p>
         </address>
         <div class="social">
           <h4>Social</h4>
+          <div class="social-icons">
             <p>
               <a href="placeholder" target="_blank"></a>
             </p>
@@ -77,6 +123,7 @@
             <p>
               <a href="placeholder"target="_blank"></a>
             </p>
+          </div>
         </div>
       </div>
     </div>
