--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
+  <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -23,7 +23,84 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="img/logo.png" alt="Unplugged Logo"></a>
+        <div class="header-divider"></div>
+          <nav>
+            <ul>
+              <li><a href="../faqs/index.html" target="_blank">FAQ</a></li>
+              <li><a href="index.html" target="_blank">About</a></li>
+            </ul>
+          </nav>
+      </div>
+    </header>
+
+    <main>
+
+      <section class="mission">
+        <div class="content-wrapper">
+            <h2>Our Mission - we want to make you the team we always wanted you to be.</h2>
+          <div class="mission-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="map">
+        <figure>
+        </figure>
+      </section>
+
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h2>Contact us, because ya'll need this.</h2>
+          <address class="contact-content">
+            <div>
+              <h4>General Information</h4>
+              <p>123 Hudson Drive; Del Rio, TX 78840<br>830-786-0098<br>stellam777@gmail.com</p>
+            </div>
+            <div>
+              <h4>Chat with a Facilitator</h4>
+              <p>830-786-0098<br>stellam777@gmail.com</p>
+            </div>
+          </address>
+        </div>
+      </section>
+
+    </main>
+
+    <footer>
+        <div class="content-wrapper">
+          <div class="footer-content">
+            <address class="contact">
+              <h4>Contact</h4>
+              <p>830-774-2158<br>
+              stellam777@gmail.com</p>
+            </address>
+            <div class="social">
+              <h4>Social</h4>
+              <div class="social-icons">
+                <p>
+                  <a href="placeholder" target="_blank"></a>
+                </p>
+                <p>
+                  <a href="placeholder" target="_blank"></a>
+                </p>
+                <p>
+                  <a href="placeholder"target="_blank"></a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>Copyright 2019 | Unplugged</p>
+        </div>
+      </footer>
+
+
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
