--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <header>
       <div class="content-wrapper">
-        <a href="#"><img src="img/logo.png" alt="Unplugged Logo"></a>
+        <a href="#"><img src="../img/logo.png" alt="Unplugged Logo"></a>
         <div class="header-divider"></div>
           <nav>
             <ul>
