--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav>
           <ul>
             <li><a href="faqs/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+            <li><a href="about/index.html" target="_blank">About</a></li>
           </ul>
         </nav>
     </div>
