--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-        <div class="features-items"></div>
+        <div class="features-items">
           <article>
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
