--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,9 @@
   <!-- Add your site or application content here -->
   <header>
       <div class="content-wrapper">
-        <a href="#"><img src="../img/logo.png" alt="Unplugged Logo"></a>
+        <figure>
+          <a href="#"><img src="../img/logo.png" alt="Unplugged Logo"></a>
+        </figure>
         <div class="header-divider"></div>
           <nav>
             <ul>
