--- a/about/index.html
+++ b/about/index.html
@@ -55,6 +55,7 @@
 
       <section class="map">
         <figure>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9390749483787!2d-73.94098258458367!3d40.719357679331075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2594d7f0fffff%3A0x698d1ca27a7558c8!2sBrooklyn%20Steel!5e0!3m2!1sen!2sus!4v1570062768141!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </figure>
       </section>
 
