--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <script src="https://kit.fontawesome.com/f83c82ef81.js" crossorigin="anonymous"></script>
+
   <!-- Google Fonts -->	
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
@@ -89,13 +91,13 @@
               <h4>Social</h4>
               <div class="social-icons">
                 <p>
-                  <a href="placeholder" target="_blank"></a>
+                  <a href="placeholder" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 </p>
                 <p>
-                  <a href="placeholder" target="_blank"></a>
+                  <a href="placeholder" target="_blank"><i class="fab fa-twitter"></i></a>
                 </p>
                 <p>
-                  <a href="placeholder"target="_blank"></a>
+                  <a href="placeholder"target="_blank"><i class="fab fa-instagram"></i></a>
                 </p>
               </div>
             </div>
