--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="placeholder" target="_blank"></a>
+              <a href="placeholder" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="placeholder" target="_blank"></a>
+              <a href="placeholder" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="placeholder"target="_blank"></a>
+              <a href="placeholder"target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
